# DSI_ProyectoC

./: CMakeCache.txtold  CMakeLists.txt  compiler.sh
ahrs/: ahrs.cpp  ahrs.cppold
mando/: mando.cpp  mando.cppold
motores/: motores.cpp  motoresConDDS.cppold  motoresSeg.cppold
pid/: PIDControl.cpp  PIDControl.h  gui.py  pid.cpp
printer/: printer.cpp
topics/ahrs/: Ahrs.cxx  Ahrs.h  Ahrs.idl  AhrsPubSubTypes.cxx  AhrsPubSubTypes.h
topics/killswitch/: Killswitch.cxx  Killswitch.h  Killswitch.idl  KillswitchPubSubTypes.cxx  KillswitchPubSubTypes.h
topics/mando/: Mando.cxx  Mando.h  Mando.idl  MandoPubSubTypes.cxx  MandoPubSubTypes.h
topics/pid/: Pid.cxx  Pid.h  Pid.idl  PidPubSubTypes.cxx  PidPubSubTypes.h
